# MROJ-backend

./: .gitignore  .gitlab-ci.yml  Cargo.toml  HONOR-CODE.md  README.md  config.json
frontend/: package-lock.json  package.json
frontend/src/: App.js  ContestPage.js  HomePage.js  Page.js  StatusPage.js  SubmitPage.js  setupProxy.js
src/: config.rs  error_log.rs  lib.rs  main.rs
src/contests/: mod.rs
src/handler/: jobs.rs  mod.rs
src/runner/: diff.rs  mod.rs
src/users/: mod.rs
tests/: advanced_requirements.rs  basic_requirements.rs  common.rs
tests/cases/: 01_02_wrong_results.data.json  01_03_multiple_cases.config.json  01_03_multiple_cases.data.json  01_04_time_limit_exceeded.data.json  01_05_strict_compare.config.json  01_05_strict_compare.data.json  02_01_cpp_support.config.json  02_01_cpp_support.data.json  03_01_job_list.config.json  03_01_job_list.data.json  03_02_job_list_with_filter.data.json  03_03_rejudging.config.json  03_03_rejudging.data.json  04_01_user_support.data.json  05_01_global_ranklist.data.json  05_02_scoring_rule.config.json  05_02_scoring_rule.data.json  05_03_tie_breaker.data.json  adv_01_contest_support.config.json  adv_01_contest_support.data.json  adv_02_persistent_storage.config.json  adv_02_persistent_storage.data.json  adv_03_nonblocking_judging.config.json  adv_03_nonblocking_judging.data.json  adv_04_01_report_memory_usage.data.json  adv_04_02_limit_memory_usage.config.json  adv_04_02_limit_memory_usage.data.json  adv_05_packed_judging.config.json  adv_05_packed_judging.data.json  adv_06_special_judge.config.json  (+3 more)
(+35 files in other folders)
