[package]
name = "oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4.22"
dotenv = "0.15.0"
serde = { version = "1.0.144" , features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
rusqlite = "0.28.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
wait-timeout = "0.2.0"
file_diff = "1.0.0"
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]